@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-04T01:00:18Z",
-  "count_outdated" : 5350,
-  "uniques_outdated" : 2963,
+  "timestamp" : "2025-10-05T01:09:56Z",
+  "count_outdated" : 5353,
+  "uniques_outdated" : 2966,
   "count" : 5376,
   "uniques" : 2986,
   "clones" : [
-    {
-      "timestamp": "2025-09-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2025-09-22T00:00:00Z",
       "count": 4,
