@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 10,
+  "count": 23,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2025-09-20T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2025-09-22T00:00:00Z",
       "count": 4,
