@@ -1,3 +1,12 @@
+2025-10-05T01:09:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18251896931 # 1263
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
+* notice: last 14d: unq all: 8 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 2963 5350 / 2986 5376
+* notice: next accum: outdated-unq outdated-all / unq all: 2966 5353 / 2986 5376
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-20] / []
+
 2025-10-04T01:00:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18237288407 # 1261
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
